// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSelection renders correctly 1`] = `
<div
  className="sc-bdVaJa ieBYTJ"
>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#eb5286"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#eb5286",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#794acf"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#794acf",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#5661b3"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#5661b3",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#2779bd"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#2779bd",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#38a89d"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#38a89d",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#1f9d55"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#1f9d55",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#f2d024"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#f2d024",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#de751f"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#de751f",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorSelection renders correctly with a random color 1`] = `
<div
  className="sc-bdVaJa ieBYTJ"
>
  <div
    className="sc-bwzfXH jgELGV"
    data-test-color="red"
    onClick={[Function]}
    selected={true}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "red",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#eb5286"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#eb5286",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#794acf"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#794acf",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#5661b3"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#5661b3",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#2779bd"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#2779bd",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#38a89d"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#38a89d",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#1f9d55"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#1f9d55",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#f2d024"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#f2d024",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#de751f"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#de751f",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorSelection renders correctly with a selected color 1`] = `
<div
  className="sc-bdVaJa ieBYTJ"
>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#eb5286"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#eb5286",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#794acf"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#794acf",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#5661b3"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#5661b3",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH jgELGV"
    data-test-color="#2779bd"
    onClick={[Function]}
    selected={true}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#2779bd",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#38a89d"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#38a89d",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#1f9d55"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#1f9d55",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#f2d024"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#f2d024",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH fzDxln"
    data-test-color="#de751f"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-htpNat fCGVby"
      style={
        Object {
          "background": "#de751f",
        }
      }
    />
  </div>
</div>
`;
